--- a/inmueble_app/templates/perfil.html
+++ b/inmueble_app/templates/perfil.html
@@ -13,7 +13,7 @@
                     <p class="card-text"><strong>Dirección:</strong> {{ user.direccion }}</p>
                     <p class="card-text"><strong>Teléfono:</strong> {{ user.telefono }}</p>
                     <p class="card-text"><strong>Tipo de usuario:</strong> {{ user.get_tipo_usuario_display }}</p>
-                    <a href="{% url 'editar_perfil' %}" class="btn btn-dark">Actualizar perfil</a>
+                    <a href="{% url 'editar_perfil' %}" class="btn btn-primary">Actualizar perfil</a>
                 </div>
             </div>
         </div>
