--- a/inmueble_app/templates/editar_perfil.html
+++ b/inmueble_app/templates/editar_perfil.html
@@ -23,7 +23,7 @@
                         {% endfor %}
                     </div>
                 {% endfor %}
-                <button type="submit" class="btn btn-dark mt-3">Actualizar</button>
+                <button type="submit" class="btn btn-primary mt-3">Actualizar</button>
             </div>
         </div>
     </form>
